--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,6 +5,7 @@
 <table>
   <thead>
     <tr>
+      <th>Photo</th>
       <th>Title</th>
       <th>Body</th>
       <th colspan="3"></th>
@@ -14,6 +15,14 @@
   <tbody>
     <% @articles.each do |article| %>
       <tr>
+        <td>
+          <% if article.photo.present? %>
+            <%= cl_image_tag article.photo.key, width: 50, height: 50, crop: :fill %>
+          <% else %>
+            <%= image_tag "http://place-hold.it/50x50", alt: "alttext" %>
+          <% end %>
+
+        </td>
         <td><%= article.title %></td>
         <td><%= article.body %></td>
         <td><%= link_to 'Show', article %></td>
