--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<%= cl_image_tag @article.photo.key, alt: "Hello!" %>
+
 <p>
   <strong>Title:</strong>
   <%= @article.title %>
